Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102782

QPushButton setEnabled(false) doesn't grey out button

XMLWordPrintable

    • macOS
    • ecfe8e6e23 (qt/qtbase/dev) ecfe8e6e23 (qt/tqtc-qtbase/dev) b36027f334 (qt/qtbase/6.3) b36027f334 (qt/tqtc-qtbase/6.3) 768ee4e499 (qt/tqtc-qtbase/5.15) cf07e968f0 (qt/tqtc-qtbase/6.2)

      The title says it all. In Qt 6.2.4 & 6.3.0 on macOS, calling QPushButton setEnabled(false) stops the button from being clicked or pressed, but doesn't grey the button out (as per all previous versions of QT up to Qt 6.2.2. I haven't tried 6.2.3)).

      Seriously QT folks, why are common, basic, simple controls being broken in newer versions of QT? (See my previous report about QMenu appearing on the wrong display.) These mistakes are unacceptable. I'm a QT licensee who has just rolled out app updates, based on QT 6.3.0, to customers, only to find that basic UI functionality looks bad and isn't operating as a user would expect from the look.

        1. QT624.png
          QT624.png
          17 kB
        2. QT630.png
          QT630.png
          18 kB
        3. QT622_works.png
          QT622_works.png
          18 kB
        4. QT623.png
          QT623.png
          18 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            mjsmithers Michael Smithers
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes